--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cross-env NODE_ENV=server PORT=5000 tsc && pm2 start server --name node_server --watch",
+    "server": "cross-env NODE_ENV=server PORT=5000 pm2 start server --name node_server --watch",
     "start": "cross-env NODE_ENV=server PORT=5000 node server",
     "watch": "tsc"
   },
@@ -39,10 +39,5 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "log4js": "^3.0.3"
-  },
-  "devDependencies": {
-    "@types/koa": "^2.0.46",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
   }
 }
