--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
-    "log4js": "^3.0.3"
+    "koa2-cors": "^2.0.6",
+    "log4js": "^3.0.3",
+    "mysql": "^2.16.0"
   }
 }
