--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["env", "stage-0"],
+    "presets": ["react", "env", "stage-0"],
     "plugins": [
         "transform-runtime"
     ]
