--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cross-env NODE_ENV=server PORT=5000 pm2 start server --name node_server --watch",
-    "start": "cross-env NODE_ENV=server PORT=5000 node server",
+    "server": "cross-env NODE_ENV=production PORT=5000 pm2 start server --name node_server --watch",
+    "start": "cross-env NODE_ENV=development PORT=5000 node server",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.config.js --progress",
     "watch": "tsc"
   },
   "repository": {
@@ -26,12 +27,18 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.2.0",
+    "css-hot-loader": "^1.4.2",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.0",
@@ -39,7 +46,32 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.6",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "log4js": "^3.0.3",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.1",
+    "webpack-dev-middleware": "^3.2.0"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "eventsource-polyfill": "^0.9.6",
+    "koa-webpack": "^1.0.0",
+    "koa-webpack-middleware": "^1.0.7",
+    "postcss-pxtorem": "^4.0.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.4"
   }
 }
