--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cross-env NODE_ENV=production PORT=5000 pm2 start server --name node_server --watch",
+    "server": "cross-env NODE_ENV=production PORT=5000  webpack --mode production --config webpack/webpack.config.js && pm2 start server --name node_server --watch",
     "start": "cross-env NODE_ENV=development PORT=5000 node server",
     "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.config.js --progress",
     "watch": "tsc"
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/WdBly/node-service-frame#readme",
   "dependencies": {
+    "autoprefixer": "^9.1.5",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
