--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "koa-webpack-middleware": "^1.0.7",
     "postcss-pxtorem": "^4.0.1",
     "webpack-cli": "^3.1.0",
+    "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4"
   }
 }
