--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "cross-env": "^5.2.0",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.0",
+    "ejs": "^2.6.1",
+    "ejs-loader": "^0.3.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -56,6 +58,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-router-config": "^4.4.0-beta.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
